(look also at the usermanual)
TexMakerX 1.9.9a -> TexMakerX 2.0  SVN 1495
--------------------------------------
- integrated pdf viewer with forward/reverse search based on Texworks
- online latex syntax checking like spell checking(for simple errors)
- support to manipulate tables (add/remove lines,columns or \hline)
- inserted brackets are automatically closed
- option to limit line length with hard wraps
- word repetitions are marked as possible style error
- faster search, highlight matches as default
- basic editor key mapping become customizable
- unicode insertion dialog
- as always, bug fixes and small improvements

TexMakerX 1.9.9 -> TexMakerX 1.9.9a
--------------------------------------
- some performance issues on mac have been adressed. It should feel faster for long sible lines on mac.
- more than one overlay can be shown at the same time e.g. for syntax highlighting and spell checking
- command replacement in completed commands was added
- a cut buffer was added. If selected text is replaced with a command via completion, the removed text is used as argument for the inserted command (if applicable)
- tool tip in completer shows the surrounding of the label to which the selected reference is pointing
- profiles containg predefined short cuts, menu redefinition, editor settings can be imported from a file
- when waiting with text cursor on an environment name, a mirror cursor is generated which allows the renaming of the environment (\begin and \end simultaneously)
- delete word, a command or an environment by typing ALT-del
- spell checking is only done in known text commands
- some dialogs adapted to cope better with small screen sizes
- lots of bugs removed after user feedback


TexMakerX 1.9.3 -> TexMakerX 1.9.9
--------------------------------------
- added interactive structure view update
- added basic scripting
- added automatically SVN commits
- added customizable toolbars, environment highlighting and LaTeX menus