@@ -20,7 +20,7 @@ body { background: #ffffff; color: black; }
 	<li><a href="#SECTIONNEW199">0.2 Version 1.9.3 -> Version 1.9.9</a></li>
 	<li><a href="#SECTIONNEW199a">0.3 Version 1.9.9 -> Version 1.9.9a</a></li>
 	<li><a href="#SECTIONNEW20">0.4 Version 1.9.9a -> Version 2.0</a></li>
-	<li><a href="#SECTIONNEW201">0.5 Version 2.0 -> Version 2.0.1</a></li>
+	<li><a href="#SECTIONNEW201">0.5 Version 2.0 -> Version 2.1</a></li>
 	</ul>
 <li><a href="#SECTION0">1. Configuring TexMakerX</a></li>
 	<ul>
@@ -176,15 +176,24 @@ changed functionality:</P>
 	<li><p>word repetitions are marked as possible style error</p>
 	<li><p>as always, bug fixes and small improvements</p>
 </ul>
-<h2><a name="SECTIONNEW201">0.5 Version 2.0 -> Version 2.0.1</a></h2>
+<h2><a name="SECTIONNEW201">0.5 Version 2.0 -> Version 2.1</a></h2>
 <ul>
 	<li><p>online latex syntax check has been extended
 	    <ul>
 	      <li><p>number of columns is checked in tabulars</p>
 	      <li><p>\usepackage and \documentclass are interpreted to decide which commands are valid in the document</p>
+	      <li><p>new commands added</p></li>
 	    </ul>
 	 </p>
 	<li><p>tmx automatically detects parent/child relation in loaded documents and acts accordingly. So normally no master mode is needed anymore.</p>
+	<li><p>improved preview:
+	    <ul><li><p>Pdf viewer can show multiple pages</li>
+	        <li><p>Pdf viewer supports a presentation mode and multiple views</li>
+                <li><p>Pdf viewer has a new overview and clock dock</p></li>
+	        <li><p>Selection preview become faster and is shown within the text</li>  
+	    </ul></p>
+	</li>
+	<li>easy parenthesis selection</li>
 	<li><p>as always, bug fixes and small improvements</p>
 </ul>
 <h1><a name="SECTION0">1. Configuring TexMakerX</a></h1>
